Fix footer cutoff

--- a/style/main.css
+++ b/style/main.css
@@ -28,7 +28,6 @@ footer {
 	overflow:hidden;
 	margin-top:50px;
 	border-top:1px solid black;
-	max-height:10%;
 }
 
 footer div.footersection {
